[package]
name = "cachemap"
version = "0.1.0"
authors = ["harri"]
edition = "2018"
keywords = ["sync", "data-structure", "cache", "hash-map"]
categories = ["concurrency", "data-structures", "caching"]
description = "A concurrent insert-only hashmap for caching values"
homepage = "https://github.com/hclarke/cachemap"
readme = "README.md"
license = "MIT"


[dependencies]
dashmap = { version = "4.0.2", optional = true }
abi_stable = { version = "*", optional = true }
